2005-03-06  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/constitute.h (enum QuantumType): Added CIEYQuantum and
	CIEXYZQuantum quantum import options.
	* coders/tiff.c (ReadTIFFImage): Import LogLuv image data within
	GraphicsMagick (rather than libtiff) so that color resolution is
	not lost.  Results in a small speedup as well.
	* magick/constitute.c (ImportImagePixelArea): Add a speed-up for
	importing bi-level images.  Add support for importing pixels in
	CIE XYZ and CIE Y colorspaces.
	* coders/tiff.c (ReadTIFFImage): Support reading TIFF images which
	fail to properly scale the samples to the sample size (e.g. 12
	bits in a 16-bit sample).
	(WriteTIFFImage): Adjustments to strip-size (rows-per-strip)
	estimation.
	* magick/constitute.c (ExportImagePixelArea): Support exporting
	unsigned samples with values which span only part of the range.
	For example, 12 bit data may be exported within 16 bit samples,
	with a value range of 0 to 4095.
	(ImportImagePixelArea): Support importing unsigned samples with
	values which span only part of the range.

2005-02-26  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/tiff.c (ReadTIFFImage): Support reading TIFF files in
	IEEEFP format.
	(WriteTIFFImage): Support writing TIFF files in IEEEFP format.
	* magick/constitute.c (ExportImagePixelArea): Support exporting
	floating point data.
	(ImportImagePixelArea): Support importing floating point data.

2005-02-26  Albert Chin-A-Young  <china@thewrittenword.com>

	* acinclude.m4 (AC_CXX_IOS_BINARY): Added macro to detect if the
	C++ compiler lacks support for ios::binary.
	* configure.ac: Use  AC_CXX_IOS_BINARY.

2005-02-19  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/tiff.c (ReadTIFFImage): Read grayscale TIFFs as
	DirectClass rather than promoting to PseudoClass.  Fix improper
	multiple repeated "disassociate" operations when reading planar
	images which contain an alpha channel.