@@ -36,6 +36,7 @@
   Include declarations.
 */
 #include "magick/studio.h"
+#include "magick/alpha_composite.h"
 #include "magick/cache.h"
 #include "magick/composite.h"
 #include "magick/gem.h"
