@@ -24,6 +24,9 @@
 2005-03-06  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
 
 <UL>
+  <LI> magick/alpha_composite.h (AlphaComposite): Moved AlphaComposite
+        to new alpha_composite.h header since it was causing porting
+        problems.<BR>
   <LI> magick/constitute.h (enum QuantumType): Added CIEYQuantum and
         CIEXYZQuantum quantum import options.
   <LI> coders/tiff.c (ReadTIFFImage): Import LogLuv image data within
